# KrakenEgg

./: .gitignore  .gitlab-ci.yml  ARCHITECTURE.md  BACKLOG.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  CURRENT_STATUS.md  DEVELOPMENT_ROADMAP.md  FEATURES.md  FINAL_STATUS.md  IMPLEMENTATION_PLAN.md  KEYBOARD_SHORTCUTS.md  LICENSE  PLUGIN_API.md  PLUGIN_ARCHITECTURE.md  PLUGIN_MARKETPLACE.md  PLUGIN_OVERVIEW.md  PLUGIN_SECURITY.md  PRODUCTION_STRATEGY.md  PRODUCT_PHASES.md  README.md  RESEARCH.md  ROADMAP_TC.md  SECURITY.md  TASK_CHECKLIST.md  TECH_STACK.md  TEST_CATALOG.md  TEST_REPORT.md  gemini.md
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  codeql.yml  release.yml  security.yml
Graphics/Icon Ideas/: SquidAppIcon.icns  SquidAppIcon_Glass.icns  SquidAppIcon_Option6_Final.icns  SquidAppIcon_Option6_Fixed.icns  SquidAppIcon_Option6_ScaledSafeZone.icns  round_corners.py
krakenegg-app/: index.html  package.json  playwright.config.ts  pnpm-lock.yaml  start_log.txt  tailwind.config.js  vite.config.ts
krakenegg-app/e2e/: accessibility.spec.ts  dual-pane.spec.ts  file-list.spec.ts  keyboard.spec.ts  modals.spec.ts  search.spec.ts  settings.spec.ts  tabs.spec.ts  theme.spec.ts
krakenegg-app/e2e/integration/: 01-rendering.spec.ts  02-click-selection.spec.ts  03-keyboard-navigation.spec.ts  04-double-click.spec.ts  05-context-menu.spec.ts  06-file-operations.spec.ts  07-modals.spec.ts  (+4 more)
krakenegg-app/src/: App.tsx  index.css  store.test.ts
krakenegg-app/src-tauri/: Cargo.toml  tauri.conf.json
krakenegg-app/src-tauri/icons/: icon.icns
krakenegg-app/src-tauri/src/: app_state.rs  archive.rs  commands.rs  lib.rs  main.rs  models.rs  mrt.rs  utils.rs
krakenegg-app/test-results/: .last-run.json
legacy/krakenegg-macos26-redesign/: package-lock.json  package.json  tailwind.config.js
legacy/krakenegg-production/: CHANGELOG.md  QUICK_START.md  README.md  VERSION_CONTROL.md
legacy/krakenegg-production/versions/v1.0.2-backup-20251004-204111/src-tauri/: Cargo.toml
legacy/krakenegg-production/versions/v1.0.2-backup-20251004-204111/src-tauri/src/: file_system.rs
legacy/krakenegg-swift-native/: KEYBOARD_NAVIGATION_FIX.md  KEYBOARD_NAVIGATION_SOLUTION.md  Package.swift  test-keyboard-navigation.js  test-shift-multiselect.js  test-swift-app.sh
legacy/krakenegg-ui-mockup/: .eslintrc.json  QUICKSTART.md  README.md  index.html  package-lock.json  package.json  tailwind.config.js
(+758 files in other folders)
