[package]
name = "krakenegg-app"
version = "0.2.0"
description = "A modern dual-pane file manager for macOS"
authors = ["Andrew Hofmann"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "krakenegg_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
path = "src/lib.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
zip = "0.6.0"
tar = "0.4.45"
flate2 = "1.0.28"
walkdir = "2"
dirs = "5"
regex = "1.12.2"
chrono = "0.4.42"
notify = "7"

[dev-dependencies]
tempfile = "3.23.0"

