[package]
name = "krakenegg"
version = "1.0.0"
description = "A modern, keyboard-driven Total Commander clone for macOS"
authors = ["KrakenEgg Team"]
license = "MIT"
repository = "https://github.com/krakenegg/krakenegg"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
thiserror = "1"
uuid = { version = "1", features = ["v4"] }

# File system operations
walkdir = "2"
fs_extra = "1"
pathdiff = "0.2"

# Archive handling
zip = "2"
tar = "0.4"
flate2 = "1"

# Network/FTP
reqwest = { version = "0.12", features = ["json", "stream"] }
suppaftp = "6"

# System integration
dirs = "5"
notify = "7"
num_cpus = "1"
chrono = { version = "0.4", features = ["serde"] }

# Logging
log = "0.4"
env_logger = "0.10"

[dev-dependencies]
tempfile = "3"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[[bin]]
name = "krakenegg"
path = "src/main.rs"
